--- a/kr/html/application-mypage-list.html
+++ b/kr/html/application-mypage-list.html
@@ -160,12 +160,12 @@
                             </td>
                             <td>2026</td>
                             <td>
-                            <div class="td-in-col2 project-name aling-left">
+                            <div class="td-in-col2 project-name align-left">
                                 <p class="info-top ">
                                 <span class="krds-badge small badge" data-name="project01"></span>
                                 <span>2026-선택-001</span>
                                 </p>
-                                <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                                <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                             </div>
                             </td>
                             <td>
@@ -188,12 +188,12 @@
                             </td>
                             <td>2026</td>
                             <td>
-                            <div class="td-in-col2 project-name aling-left">
+                            <div class="td-in-col2 project-name align-left">
                                 <p class="info-top ">
                                 <span class="krds-badge small badge" data-name="project02"></span>
                                 <span>2026-선택외-001</span>
                                 </p>
-                                <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                                <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                             </div>
                             </td>
                             <td>
@@ -220,12 +220,12 @@
                             </td>
                             <td>2026</td>
                             <td>
-                            <div class="td-in-col2 project-name aling-left">
+                            <div class="td-in-col2 project-name align-left">
                                 <p class="info-top ">
                                 <span class="krds-badge small badge" data-name="project03"></span>
                                 <span>2026-개방형-001</span>
                                 </p>
-                                <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                                <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                             </div>
                             </td>
                             <td>
@@ -248,12 +248,12 @@
                             </td>
                             <td>2026</td>
                             <td>
-                            <div class="td-in-col2 project-name aling-left">
+                            <div class="td-in-col2 project-name align-left">
                                 <p class="info-top ">
                                 <span class="krds-badge small badge" data-name="project04"></span>
                                 <span>2026-자율-001</span>
                                 </p>
-                                <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                                <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                             </div>
                             </td>
                             <td>
@@ -276,12 +276,12 @@
                             </td>
                             <td>2026</td>
                             <td>
-                            <div class="td-in-col2 project-name aling-left">
+                            <div class="td-in-col2 project-name align-left">
                                 <p class="info-top ">
                                 <span class="krds-badge small badge" data-name="project05"></span>
                                 <span>2026-특교-001</span>
                                 </p>
-                                <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                                <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                             </div>
                             </td>
                             <td>
@@ -308,12 +308,12 @@
                             </td>
                             <td>2026</td>
                             <td>
-                            <div class="td-in-col2 project-name aling-left">
+                            <div class="td-in-col2 project-name align-left">
                                 <p class="info-top ">
                                 <span class="krds-badge small badge" data-name="project01"></span>
                                 <span>2026-선택-001</span>
                                 </p>
-                                <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                                <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                             </div>
                             </td>
                             <td>
@@ -336,12 +336,12 @@
                             </td>
                             <td>2026</td>
                             <td>
-                            <div class="td-in-col2 project-name aling-left">
+                            <div class="td-in-col2 project-name align-left">
                                 <p class="info-top ">
                                 <span class="krds-badge small badge" data-name="project01"></span>
                                 <span>2026-선택-001</span>
                                 </p>
-                                <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                                <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                             </div>
                             </td>
                             <td>
@@ -364,12 +364,12 @@
                             </td>
                             <td>2026</td>
                             <td>
-                            <div class="td-in-col2 project-name aling-left">
+                            <div class="td-in-col2 project-name align-left">
                                 <p class="info-top ">
                                 <span class="krds-badge small badge" data-name="project01"></span>
                                 <span>2026-선택-001</span>
                                 </p>
-                                <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                                <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                             </div>
                             </td>
                             <td>
@@ -392,12 +392,12 @@
                             </td>
                             <td>2026</td>
                             <td>
-                            <div class="td-in-col2 project-name aling-left">
+                            <div class="td-in-col2 project-name align-left">
                                 <p class="info-top ">
                                 <span class="krds-badge small badge" data-name="project01"></span>
                                 <span>2026-선택-001</span>
                                 </p>
-                                <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                                <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                             </div>
                             </td>
                             <td>
@@ -420,12 +420,12 @@
                             </td>
                             <td>2026</td>
                             <td>
-                            <div class="td-in-col2 project-name aling-left">
+                            <div class="td-in-col2 project-name align-left">
                                 <p class="info-top ">
                                 <span class="krds-badge small badge" data-name="project01"></span>
                                 <span>2026-선택-001</span>
                                 </p>
-                                <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                                <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                             </div>
                             </td>
                             <td>
