--- a/kr/html/application-vice-principal-list.html
+++ b/kr/html/application-vice-principal-list.html
@@ -91,12 +91,12 @@
                 <caption>사업신청관리 목록 표</caption>
                 <colgroup>
                     <col style="width:8%;">
-                    <col style="width:42%;">
-                    <col style="width:15%;">
+                    <col>
+                    <col style="width:10%;">
                     <col>
                     <col>
-                    <col>
-                    <col>
+                    <col style="width:6%;">
+                    <col style="width:6%;">
                 </colgroup>
                 <thead>
                   <tr>
@@ -113,12 +113,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -135,12 +135,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project02"></span>
                           <span>2026-선택외-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -157,12 +157,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project03"></span>
                           <span>2026-개방형-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -179,12 +179,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project04"></span>
                           <span>2026-자율-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -201,12 +201,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project05"></span>
                           <span>2026-특교-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -223,12 +223,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -245,12 +245,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -267,12 +267,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -289,12 +289,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -311,12 +311,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
