--- a/kr/html/common-main.html
+++ b/kr/html/common-main.html
@@ -49,7 +49,7 @@
                     <div class="search-box">
                         <input type="text" class="search-input" placeholder="원하는 사업명을 검색해 보세요." />
                         <button class="search-button" aria-label="검색">
-                            <div class="search-icon"></div>
+                            <i class="svg-icon ico-sch white"></i>
                         </button>
                     </div>
                     <div class="search-tags">
