--- a/kr/html/member-vice-principal-list.html
+++ b/kr/html/member-vice-principal-list.html
@@ -62,8 +62,8 @@
                         <div class="admin-setting">
                             <label for="adminToggle" class="admin-label">관리자 지정</label>
                             <div class="krds-form-toggle-switch medium">
-                                <input type="checkbox" id="switch_lg_md_checked" checked="">
-                                <label for="switch_lg_md_checked"><span class="switch-toggle"><i></i></span></label>
+                                <input type="checkbox" id="switch_lg_md_checked1" checked="">
+                                <label for="switch_lg_md_checked1"><span class="switch-toggle"><i></i></span></label>
                             </div>
                         </div>
                     </div>
@@ -95,8 +95,8 @@
                         <div class="admin-setting">
                             <label for="adminToggle" class="admin-label">관리자 지정</label>
                             <div class="krds-form-toggle-switch medium">
-                                <input type="checkbox" id="switch_lg_md_checked" checked="">
-                                <label for="switch_lg_md_checked"><span class="switch-toggle"><i></i></span></label>
+                                <input type="checkbox" id="switch_lg_md_checked2" checked="">
+                                <label for="switch_lg_md_checked2"><span class="switch-toggle"><i></i></span></label>
                             </div>
                         </div>
                     </div>
@@ -128,8 +128,8 @@
                         <div class="admin-setting">
                             <label for="adminToggle" class="admin-label">관리자 지정</label>
                             <div class="krds-form-toggle-switch medium">
-                                <input type="checkbox" id="switch_lg_md_checked" checked="">
-                                <label for="switch_lg_md_checked"><span class="switch-toggle"><i></i></span></label>
+                                <input type="checkbox" id="switch_lg_md_checked3" checked="">
+                                <label for="switch_lg_md_checked3"><span class="switch-toggle"><i></i></span></label>
                             </div>
                         </div>
                     </div>
@@ -161,8 +161,8 @@
                         <div class="admin-setting">
                             <label for="adminToggle" class="admin-label">관리자 지정</label>
                             <div class="krds-form-toggle-switch medium">
-                                <input type="checkbox" id="switch_lg_md_checked" checked="">
-                                <label for="switch_lg_md_checked"><span class="switch-toggle"><i></i></span></label>
+                                <input type="checkbox" id="switch_lg_md_checked4" checked="">
+                                <label for="switch_lg_md_checked4"><span class="switch-toggle"><i></i></span></label>
                             </div>
                         </div>
                     </div>
@@ -194,8 +194,8 @@
                         <div class="admin-setting">
                             <label for="adminToggle" class="admin-label">관리자 지정</label>
                             <div class="krds-form-toggle-switch medium">
-                                <input type="checkbox" id="switch_lg_md_checked" checked="">
-                                <label for="switch_lg_md_checked"><span class="switch-toggle"><i></i></span></label>
+                                <input type="checkbox" id="switch_lg_md_checked5" checked="">
+                                <label for="switch_lg_md_checked5"><span class="switch-toggle"><i></i></span></label>
                             </div>
                         </div>
                     </div>
