--- a/kr/html/application-school-admin-list.html
+++ b/kr/html/application-school-admin-list.html
@@ -114,12 +114,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -136,12 +136,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project02"></span>
                           <span>2026-선택외-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -158,12 +158,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project03"></span>
                           <span>2026-개방형-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -180,12 +180,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project04"></span>
                           <span>2026-자율-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -202,12 +202,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project05"></span>
                           <span>2026-특교-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -224,12 +224,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -246,12 +246,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -268,12 +268,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -290,12 +290,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
@@ -312,12 +312,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>홍길동</td>
