--- a/kr/html/privacy_policy.html
+++ b/kr/html/privacy_policy.html
@@ -218,7 +218,7 @@
                             <li>① 충청남도교육청은 다음의 목적을 위하여 개인정보를 수집하여 처리합니다. 처리하고 있는 개인정보는 다음 목적 이외의 용도로는 이용되지 않으며, 이용 목적이 변경되는 경우에는 개인정보 보호법 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.</li>
                             <li>② 충청남도교육청이 개인정보 보호법 제32조에 따라 등록, 공개하는 개인정보파일은 개인정보보호위원회 개인정보포털(www.privacy.go.kr)→개인서비스→개인정보 열람등요구→「개인정보파일 목록 검색」메뉴를 통해 공개하고 있습니다.(기관명에'충청남도교육청'을 입력하면 조회 가능)
                                 <div class="privacy-btn-group">
-                                    <a href="https://www.privacy.go.kr/front/wcp/dcl/per/personalInfoFileSrhList.do?searchInsttCode=8140000&searchInsttNm" target="_blank" class="krds-btn medium primary" title="개인정보파일 현황 보기 바로가기(새창)">
+                                    <a href="https://www.privacy.go.kr/front/wcp/dcl/per/personalInfoFileSrhList.do?searchInsttCode=8140000&searchInsttNm" target="_blank" class="krds-btn medium secondary" title="개인정보파일 현황 보기 바로가기(새창)">
                                         개인정보파일 현황 보기 바로가기
                                     </a>
                                 </div>
@@ -265,7 +265,7 @@
                             <li>① 충청남도교육청은 원칙적으로 정보주체의 개인정보를 개인정보 수집·이용 목적으로 명시한 범위를 초과하여 제3자에게 제공하지 않습니다. 다만, 정보주체의 동의, 법률의 특별한 규정 등 개인정보 보호법 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.</li>
                             <li>② 충청남도교육청은 제3자에게 제공하는 개인정보 제공 현황은 「개인정보 제3자 제공현황」 게시판에 개제하여 정보주체가 확인할 수 있도록 안내하고 있습니다.
                                 <div class="privacy-btn-group">
-                                    <a href="/boardCnts/list.do?boardID=11087&m=0908&s=cne&orderBy=dateDesc" target="_blank" class="krds-btn medium primary" title="개인정보 제3자 제공현황 바로가기(새창)">
+                                    <a href="" target="_blank" class="krds-btn medium secondary" title="개인정보 제3자 제공현황 바로가기(새창)">
                                         개인정보 제3자 제공현황 바로가기
                                     </a>
                                 </div>
@@ -305,7 +305,7 @@
                         <ul class="privacy-list">
                             <li>① 충청남도교육청은 원활한 개인정보 업무처리를 위하여 제3자에게 개인정보 처리 업무를 위탁하고 있으며, 개인정보처리 위탁 현황은 「개인정보처리 위탁 현황」게시판에 게재하여 정보주체가 확인할 수 있도록 안내하고 있습니다.
                                 <div class="privacy-btn-group">
-                                    <a href="/boardCnts/list.do?boardID=20716&m=0909&s=cne" target="_blank" class="krds-btn medium primary" title="개인정보처리 위탁 현황 바로가기(새창)">
+                                    <a href="" target="_blank" class="krds-btn medium secondary" title="개인정보처리 위탁 현황 바로가기(새창)">
                                         개인정보처리 위탁 현황 바로가기
                                     </a>
                                 </div>
@@ -372,13 +372,13 @@
                         </ul>
                         
                         <div class="privacy-btn-group centered">
-                            <a href="/boardCnts/fileDown.do?m=0203&s=apple&fileSeq=e67fde71aa8818a26d1928f9601f95bd" class="krds-btn medium tertiary" title="개인정보(열람,정정,삭제,처리정지)요구서 다운로드">
+                            <a href="" class="krds-btn medium tertiary" title="개인정보(열람,정정,삭제,처리정지)요구서 다운로드">
                                 개인정보(열람,정정,삭제,처리정지)요구서 <i class="svg-icon ico-down"></i>
                             </a>
-                            <a href="/boardCnts/fileDown.do?m=0203&s=apple&fileSeq=228b4d3aad04984c1628c32ad1d8303f" class="krds-btn medium tertiary" title="위임장 다운로드">
+                            <a href="" class="krds-btn medium tertiary" title="위임장 다운로드">
                                 위임장 <i class="svg-icon ico-down"></i>
                             </a>
-                            <a href="/boardCnts/fileDown.do?m=0203&s=apple&fileSeq=1814892cb5023648317054a816c12787" class="krds-btn medium tertiary" title="요구 결정 이의신청서 다운로드">
+                            <a href="" class="krds-btn medium tertiary" title="요구 결정 이의신청서 다운로드">
                                 요구 결정 이의신청서 <i class="svg-icon ico-down"></i>
                             </a>
                         </div>
@@ -412,7 +412,7 @@
                                         <tbody>
                                             <tr>
                                                 <td>재무과 전산팀(정보보호센터)</td>
-                                                <td class="text-left">
+                                                <td class="align-left">
                                                     <ul class="contact-list">
                                                         <li>041-640-8252(전화)</li>
                                                         <li>041-631-8638(팩스)</li>
@@ -539,7 +539,7 @@
                                             <tr>
                                                 <td>개인정보 보호책임자</td>
                                                 <td>행정국장 김희홍</td>
-                                                <td rowspan="3" class="text-left">
+                                                <td rowspan="3" class="align-left">
                                                     <ul class="contact-list">
                                                         <li>041-640-8252(전화)</li>
                                                         <li>041-631-8638(팩스)</li>
@@ -624,7 +624,7 @@
                     <div class="article-content">
                         <p class="article-intro">본 개인정보 처리방침은 2025. 7. 1. 시행일로부터 적용되며, 이전의 개인정보 처리방침은 "이력보기"에서 확인할 수 있습니다.</p>
                         <div class="privacy-btn-group">
-                            <a href="/boardCnts/list.do?boardID=932&m=0902&s=cne" class="krds-btn medium primary" title="이력보기">
+                            <a href="" class="krds-btn small secondary" title="이력보기">
                                 이력보기
                             </a>
                         </div>
