--- a/kr/html/report-vice-principal-list.html
+++ b/kr/html/report-vice-principal-list.html
@@ -41,47 +41,6 @@
   <header id="header_president"></header>
   <!-- //header include -->
 
-  <!-- Modal -->
-<section id="reasonDetailModal" class="krds-modal fade" role="dialog" aria-labelledby="tit_reasonDetailModal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      
-      <!-- Modal Header -->
-      <div class="modal-header">
-        <h2 id="tit_reasonDetailModal" class="modal-title">사유 상세보기</h2>
-        <p class="modal-description">미제출, 반송, 반려 등의 사유가 출력됩니다.</p>
-      </div>
-
-      <!-- Modal Contents -->
-      <div class="modal-conts">
-        <div class="conts-area">
-          <div class="modal-box">
-            <div class="modal-box-content">
-              <p class="modal-box-text">사업 내용이 충분하지 않습니다.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal Buttons -->
-      <div class="modal-btn btn-wrap">
-        <button type="button" class="krds-btn medium primary close-modal">확인</button>
-      </div>
-
-      <!-- Close Button -->
-      <button type="button" class="krds-btn medium icon btn-close close-modal" aria-label="닫기">
-        <span class="sr-only">닫기</span>
-        <i class="svg-icon ico-popup-close"></i>
-      </button>
-
-    </div>
-  </div>
-
-  <!-- Modal Background -->
-  <div class="modal-back"></div>
-</section>
-<!-- //Modal -->
-
 <main class="list-container">
         <div class="list-inner">
             <section class="subtitle-container sub02">
@@ -131,13 +90,13 @@
               <table class="tbl col data center">
                 <caption>결과보고 목록 표</caption>
                 <colgroup>
-                    <col style="width:8%;">
+                    <col style="width:6%;">
                     <col>
                     <col style="width:12%;">
-                    <col style="width:12%;">
+                    <col style="width:10%;">
                     <col style="width:8%;">
                     <col style="width:8%;">
-                    <col style="width:8%;">
+                    <col style="width:6%;">
                 </colgroup>
                 <thead>
                   <tr>
@@ -154,12 +113,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>
@@ -176,12 +135,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project02"></span>
                           <span>2026-선택외-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>
@@ -202,12 +161,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project03"></span>
                           <span>2026-개방형-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>
@@ -228,12 +187,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project04"></span>
                           <span>2026-자율-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>
@@ -250,12 +209,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project05"></span>
                           <span>2026-특교-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>
@@ -272,12 +231,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>
@@ -294,12 +253,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>
@@ -316,12 +275,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>
@@ -338,12 +297,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>
@@ -360,12 +319,12 @@
                   <tr>
                     <td>2026</td>
                     <td>
-                      <div class="td-in-col2 project-name aling-left" >
+                      <div class="td-in-col2 project-name align-left" >
                         <p class="info-top ">
                           <span class="krds-badge small badge" data-name="project01"></span>
                           <span>2026-선택-001</span>
                         </p>
-                        <strong class="ellipsis aling-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
+                        <strong class="ellipsis align-left">[별도모집] 2026년 충남학생온라인플랫폼 들락날락 학생 제안 정책 운영 개방형 사업</strong>
                       </div>
                     </td>
                     <td>
